syntax = "proto3";

package accounts;

option java_multiple_files = true;
option java_package = "hive.svc.accounts";
option java_outer_classname = "AccountsSvc";

import "common.proto";

// Account service definition.
service Accounts {

  rpc CreateAccount (common.SignedChallenge) returns (common.Certificate);

  // refresh attestation
  rpc UpdateAttestation (common.SignedChallenge) returns (common.Certificate);

  // publish new prekeys
  rpc UpdatePreKeys (common.PreKeyBundle) returns (UpdateKeyResult);

  // get a prekey bundle for the peer
  rpc GetPreKeys (common.Peer) returns (common.PreKeyBundle);

}

message UpdateKeyResult {
  //TODO
}
